@@ -1,5 +1,8 @@
 2013-05-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* src/qt4/debug_log_painter.cpp:
+	- 行動列描画時に評価値の描画も追加
+
 	* src/qt4/action_sequence_selector.cpp:
 	* src/qt4/action_sequence_selector.h:
 	* src/qt4/debug_message_window.cpp:
